# dash-demo

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  app.py  package-lock.json  package.json  pyproject.toml
gapminder/: main.py
gapminder/assets/: tracker.js
