[tool.poetry]
name = "dash-demo"
version = "0.1.0"
description = ""
authors = ["Thomas Husken <thomas.husken@schibsted.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.5.1"
pandas = "^1.4.3"
gunicorn = "^20.1.0"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = "^22.6.0"
pylint = "^2.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
